welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: forward reference extends over definition of variable y
	tab = rassemblage();
              ^